# small_backend

./: .env  .gitignore  README.md  compose.yaml  develop.compose.yaml  test.compose.yaml
.github/workflows/: pytest.yaml  ruff.yaml
backend/: Dockerfile  alembic.ini  flake.nix  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a4a7a7fbf50d_initiate_db_model.py  d1a325f0b79b_init_db_s.py
backend/app/: config.py  crud.py  db.py  deps.py  main.py  model_data.py  model_db.py  settings.py
backend/app/alembic/versions/: d54119800258_initiate_db_model.py
backend/app/core/: db.py  deps.py
backend/app/crud/: answers_crud.py  questions_crud.py
backend/app/data_models/: answers_model.py  db_model.py  questions_model.py
backend/app/routes/: answers.py  question.py  questions.py
backend/app/tests/crud/: test_crud.py
backend/scripts/: lint.sh
backend/test/: conftest.py
backend/test/api/routes/: test_answers.py
backend/test/crud/: test_crud.py
backend/tests/: conftest.py
backend/tests/crud/: test_crud.py
backend/tests/routes/: test_answers.py  test_questions.py
